[package]
name = "bevy_oddio"
authors = ["Gio Genre De Asis"]
version = "0.1.0"
edition = "2021"
description = "A third party Bevy plugin that integrates `oddio` into Bevy."
homepage = "https://github.com/harudagondi/bevy_oddio"
repository = "https://github.com/harudagondi/bevy_oddio"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "oddio", "audio", "gamedev"]
categories = ["game-development", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oddio = "0.5"
cpal = "0.13"
hound = { version = "3.4", optional = true }
lewton = { version = "0.10", optional = true }
claxon = { version = "0.4", optional = true }
minimp3 = { version = "0.5", optional = true }

[features]
default = ["wav"]
wav = ["hound"]
mp3 = ["minimp3"]
ogg = ["lewton"]
flac = ["claxon"]

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy.git"
default-features = false
features = ["bevy_asset"]